--- a/nginx_reverse_proxy/nginx.conf
+++ b/nginx_reverse_proxy/nginx.conf
@@ -1,11 +1,20 @@
-server {
-   listen 80;
-   listen [::]:80;
-   server_name nginx_reverse_proxy;
+events {
+}
 
-   location / {
-      proxy_pass 127.0.0.1:3000;
-      include proxy_params;
+http {
+
+   server {
+      listen 80;
+      listen [::]:80;
+      server_name nginx.com;
+
+      location / {
+         proxy_pass http://127.0.0.1:3000;
+         proxy_http_version 1.1;
+         proxy_set_header Upgrade $http_upgrade;
+         proxy_set_header Connection 'upgrade';
+         proxy_set_header Host $host;
+         proxy_cache_bypass $http_upgrade;
+      }
    }
-
 }
