--- a/nginx_reverse_proxy/nginx.conf
+++ b/nginx_reverse_proxy/nginx.conf
@@ -6,7 +6,7 @@ http {
    server {
       listen 80;
       listen [::]:80;
-      server_name nginx.com;
+      server_name nginx-reverse-proxy-app.com;
 
       location / {
          proxy_pass http://127.0.0.1:3000;
